--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
     "require": {
         "php": "^7.0",
         "yiisoft/yii2": "~2.0.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "bossit\\logger\\": "src"
+        }
     }
 }
