Added the telegram bot package

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,14 @@
 {
-    "name": "bossit/yii2-telegram-logger",
-    "description": "Push the message in Telegram",
-    "require": {
-        "php": "^7.0",
-        "yiisoft/yii2": "~2.0.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "bossit\\logger\\": "src"
-        }
+  "name": "bossit/yii2-telegram-logger",
+  "description": "Push the message in Telegram",
+  "require": {
+    "php": "^7.0",
+    "yiisoft/yii2": "~2.0.0",
+    "longman/telegram-bot": "^0.53.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "bossit\\logger\\": "src"
     }
+  }
 }
