--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: php
 
 php:
   - 7.0
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 install:
   - travis_retry composer self-update
