--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: php
 
 php:
-  - 7.0
+  - 7.2
+
+sudo: false
+
 cache:
   directories:
     - $HOME/.composer/cache
 
 install:
   - travis_retry composer self-update
-  - travis_retry composer install --prefer-dist
+  - travis_retry composer global require "fxp/composer-asset-plugin:^1.4.4"
+  - travis_retry composer install --prefer-dist --no-interaction
+
+script:
+  - whoami
