Change repository by composer
This reverts commit cc65212cf85069bdfefdd92156ff85d20d04c5d9.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
     "yiisoft/yii2": "~2.0.0",
     "longman/telegram-bot": "^0.53.0"
   },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://asset-packagist.org"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "bossit\\logger\\": "src"
