--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ sudo: false
 
 cache:
   directories:
-    - $HOME/.composer/cache
+    - "$HOME/.composer/cache"
 
 install:
   - travis_retry composer self-update
-  - travis_retry composer global require "fxp/composer-asset-plugin:^1.4.4"
-  - travis_retry composer install --prefer-dist --no-interaction
+  - travis_retry composer global require "fxp/composer-asset-plugin:^1.3"
+  - travis_retry composer install --prefer-dist --no-interaction --dev
 
 script:
   - whoami
